1041 Add WorkflowTemplateProxyClient for the proxy workflow-template endpoints